<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.brainupco.geotimeclock.MainActivity"
    android:background="@color/colorAccent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout1">

        <ImageView
            android:id="@+id/status_icon_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/available" />

        <TextView
            android:id="@+id/status_icon_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/status_available"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2"
        android:background="@color/colorPrimary"
        android:padding="16sp"
        android:layout_above="@+id/linearLayout3">

        <LinearLayout
            android:id="@+id/dataZone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20sp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_starting_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/main_starting_time_title"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/txt_starting_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_elapsed_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/main_elapsed_time_title"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/white" />

                    <Chronometer
                        android:id="@+id/chm_elapsed_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/lbl_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/main_task_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="15sp"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur molestie velit euismod magna viverra, semper posuere est molestie."
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/ib_checkin"
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:background="@drawable/roundcorner"
                android:enabled="true"
                android:onClick="checkInClick"
                android:scaleType="fitXY"
                android:src="@drawable/checkin" />

            <TextView
                android:id="@+id/lbl_ib_checkin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/main_btn_checkin_title"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <ImageButton
                android:id="@+id/ib_checkout"
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:background="@drawable/roundcorner"
                android:enabled="true"
                android:onClick="checkOutClick"
                android:scaleType="fitXY"
                android:src="@drawable/checkout"
                android:visibility="visible" />

            <TextView
                android:id="@+id/lbl_ib_checkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/main_btn_checkout_title"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
